# battery-optimization

./: .gitignore  .pre-commit-config.yml  README.md  docker-compose.yml  init.sql  pyproject.toml
battery_optimization/: app.py  data_sources.py  llm_reasoning.py  optimization.py  scheduling_script.py
