[project]
name = "battery-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "cvxpy>=1.6.0",
    "ecos>=2.0.14",
    "isort>=6.0.0",
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
]

# Black formatting
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
 exclude = '''
 /(
       data/
     | notebooks/
     |  .eggs         # exclude a few common directories in the
     | .git          # root of the project
     | .hg
     | .mypy_cache
     | .tox
     | venv
     | _build
     | buck-out
     | build
     | dist
   )/
 '''

 # iSort
 [tool.isort]
 profile = "black"
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = true
 virtual_env = "venv"
 skip = ["data", "notebooks"]

 [tool.flake8]
 exclude = ["data", "notebooks", "venv"]
 ignore = ["E501", "W503", "E226"]

 # Pytest
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
