[project]
name = "battery-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "cvxpy>=1.6.0",
    "gym>=0.26.2",
    "isort>=6.0.0",
    "jupyterlab>=4.3.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "shimmy>=2.0.0",
    "sqlalchemy>=2.0.38",
    "stable-baselines3>=2.5.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["battery_optimization"]

# Black formatting
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
 exclude = '''
 /(
       data/
     | notebooks/
     |  .eggs         # exclude a few common directories in the
     | .git          # root of the project
     | .hg
     | .mypy_cache
     | .tox
     | venv
     | _build
     | buck-out
     | build
     | dist
   )/
 '''

 # iSort
 [tool.isort]
 profile = "black"
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = true
 virtual_env = "venv"
 skip = ["data", "notebooks"]

 [tool.flake8]
 exclude = ["data", "notebooks", "venv"]
 ignore = ["E501", "W503", "E226"]

 # Pytest
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
